--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A recipe application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --config ./config/webpack.config.js"
   },
   "author": "Alson Shareef",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
