--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "A recipe application",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config ./config/webpack.config.js"
+    "start": "webpack-dev-server --config config/webpack.dev.js --open",
+    "build": "webpack --config config/webpack.prod.js"
   },
   "author": "Alson Shareef",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
